--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2>Location de voiture</h2>
                </div>
                <div class="titreDroit">
-                   Annulation gratuite <i class="far fa-info-circle"></i>
+                   Annulation gratuite <i class="fas fa-info-circle"></i>
                    
                </div>
             
@@ -54,7 +54,7 @@
               />
               <label for="floatingPassword">
                 Ville, aéroport, gare
-                <i class="far fa-search"></i>
+                <i class="fas fa-info-circle"></i>
               </label>
             </div>
             <div class="mb-3 form-check">
@@ -84,11 +84,11 @@
               <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="check" />
                 <label class="form-check-label" for="CheckAge">
-                  Conducteur agé entre 26 et 65 ans <i class="far fa-info-circle"></i>
+                  Conducteur agé entre 26 et 65 ans<i class="fas fa-info-circle"></i>
                 </label>
               </div>
               <button type="button" class="btn btn-success">Rechercher</button>
-              <p><i class="far fa-info-circle"></i><a href="!#">Situation actuelle Covid 19</a></p>
+              <p><i class="fas fa-info-circle"></i><a href="!#">Situation actuelle Covid 19</a></p>
               <a href="!#">Plus d'options</a>
           </form> 
       </section>
